[package]
name = "pizza_service"
version = "1.0.0"
authors = ["HeapUnderflow <HeapUnderfl0w@users.noreply.github.com>"]
publish = false
license-file = "LICENSE"
keywords = ["ONOC", "API", "Script"]


[dependencies]
reqwest = "^0.8"
serde = "^1"
serde_json = "^1"
toml = "^0.4"
serde_derive = "^1"
chrono = "^0.4"
ears = "^0.4"